2005-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Modify regexp
	for the sports group following the change of the site.
	(shimbun-asahi-prepare-article): Set date and remove adv for the
	sports group.

2005-03-13  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-wincefan.el (shimbun-wincefan-content-start): Updated.
	(shimbun-wincefan-content-end): Ditto.
	(shimbun-get-headers): Ditto.
	(shimbun-wincefan-parse-time): Removed.
	(shimbun-make-contents): Not to modify the current buffer and
	simply expand relative URLs.

2005-03-13  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* shimbun/sb-yahoo-sports.el: New shimbun backend for
	Yahoo!SPORTS.

	* doc/emacs-w3m-ja.texi (Sport Sites Supported by Shimbun): Update.

	* doc/emacs-w3m.texi (Sport Sites Supported by Shimbun): Ditto.

2005-03-13  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-sourceforge-jp.el (shimbun-index-url): Fix generating
	url rule.

	* shimbun/sb-savannah.el (shimbun-savannah-url): Improve url.

	* shimbun/sb-ruby.el (shimbun-ruby-url): Improve url.
	(shimbun-index-url): Fix generating url rule.

2005-03-12  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-toshiba.el (Toplevel): Add 'require cl' when compiling.
	(shimbun-toshiba-from-address): New variable.
	(shimbun-get-headers): New method define.

2005-03-12  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-plucker.el (shimbun-plucker-litemplate-regexp):
	Improve Regexp.
	(shimbun-plucker-extract-header-values): Fix supporting new regexp.

	* shimbun/sb-orca.el (shimbun-orca-url): Improve url.
	(shimbun-orca-litemplate-regexp): Improve Regexp.

2005-03-12  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* shimbun/sb-msports-nifty.el: Follow the change of site design.

	* shimbun/sb-f1express.el: Removed.

	* shimbun/sb-f1fan.el: Update the email address of the author.

	* shimbun/sb-makanai.el: Ditto.

	* shimbun/sb-nikkansports.el: Ditto.
